--- a/MERP/MERP.csproj
+++ b/MERP/MERP.csproj
@@ -35,10 +35,10 @@
   <ItemGroup>
     <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\PrivateAssemblies\MySql.Data.dll</HintPath>
+      <HintPath>.\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="NotificationWindow">
-      <HintPath>..\..\ToDoList_v4\ToDoList\NotificationWindow.dll</HintPath>
+      <HintPath>.\NotificationWindow.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
