--- a/MERP/MERP.csproj
+++ b/MERP/MERP.csproj
@@ -148,6 +148,12 @@
       <DependentUpon>proje_list.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rapor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Rapor.Designer.cs">
+      <DependentUpon>Rapor.cs</DependentUpon>
+    </Compile>
     <Compile Include="siparisemri_duzenle.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -226,6 +232,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Rapor.resx">
+      <DependentUpon>Rapor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="siparisemri_duzenle.resx">
       <DependentUpon>siparisemri_duzenle.cs</DependentUpon>
     </EmbeddedResource>
