--- a/MERP/MERP.csproj
+++ b/MERP/MERP.csproj
@@ -101,6 +101,12 @@
     <Compile Include="fatura_giris.Designer.cs">
       <DependentUpon>fatura_giris.cs</DependentUpon>
     </Compile>
+    <Compile Include="GenelRapor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GenelRapor.Designer.cs">
+      <DependentUpon>GenelRapor.cs</DependentUpon>
+    </Compile>
     <Compile Include="hakkinda.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -207,6 +213,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="fatura_giris.resx">
       <DependentUpon>fatura_giris.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GenelRapor.resx">
+      <DependentUpon>GenelRapor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="hakkinda.resx">
       <DependentUpon>hakkinda.cs</DependentUpon>
